# tauri-plugin-whisper-rs

./: Cargo.toml  README.md  package.json  tsconfig.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  run.sh  run2.sh
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/.cargo/: config.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.d.ts  index.ts
permissions/: default.toml  initialize.toml  release.toml  transcribe.toml  transcribe_from_file.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: audio_processor.rs  commands.rs  error.rs  lib.rs  models.rs  whisper.rs
