[package]
name = "tauri-plugin-whisper-rs"
version = "0.1.0"
authors = ["Mehmet Uysal"]
description = "Local Whisper-based audio transcription plugin for Tauri applications."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-whisper-rs"

[dependencies]
tauri = { version = "2.11.2" }
serde = "1.0"
thiserror = "2"
whisper-rs = { version = "0.16.0" }
symphonia = { version = "0.5.5", features = ["all"] }

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
